[package]
name = "tokio-io-pool"
version = "0.1.5"

description = "Alternative tokio thread pool for I/O-heavy applications"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

homepage = "https://github.com/jonhoo/tokio-io-pool"
repository = "https://github.com/jonhoo/tokio-io-pool.git"

keywords = ["futures", "tokio", "threadpool", "io"]
categories = ["asynchronous", "concurrency", "network-programming"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "jonhoo/tokio-io-pool" }
maintenance = { status = "experimental" }

[dependencies]
tokio = "0.1"
futures = "0.1"
num_cpus = "1.8"
tokio-executor = "0.1.2"

[dev-dependencies]
tokio-current-thread = "0.1"
