[package]
name = "tokio-io-pool"
version = "0.2.0-alpha.4"
edition = "2018"

description = "Alternative tokio thread pool for executing short, I/O-heavy futures efficiently"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

homepage = "https://github.com/jonhoo/tokio-io-pool"
repository = "https://github.com/jonhoo/tokio-io-pool.git"

keywords = ["futures", "tokio", "threadpool", "io"]
categories = ["asynchronous", "concurrency", "network-programming"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "jonhoo/tokio-io-pool" }
maintenance = { status = "deprecated" }

[dependencies]
futures-core-preview = "=0.3.0-alpha.19"
tokio = "=0.2.0-alpha.6"
num_cpus = "1.8"
tokio-executor = "=0.2.0-alpha.6"

[dev-dependencies]
futures-preview = "=0.3.0-alpha.19"
futures-util-preview = "=0.3.0-alpha.19"
